[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "crawl-pipeline"
version = "0.2.0"
description = "Functional hexagonal crawler pipeline on Crawl4AI (Playwright) with robust retries/timeouts/limits and pluggable storage (FS/S3/GCS)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Yonata"}]

dependencies = [
  "crawl4ai>=0.7.0",
  "aiohttp>=3.9.5",
  "yarl>=1.9.4",
]

[project.optional-dependencies]
cloud = [
  "boto3>=1.34.0",
  "google-cloud-storage>=2.17.0",
]
orchestration = [
  "prefect>=2.20.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "mypy>=1.10.0",
  "ruff>=0.5.7",
  "hypothesis>=6.112.0"
]

[project.scripts]
crawl-small = "crawl_pipeline.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "integration: marks tests that hit the network (deselect with -m 'not integration')",
]
